<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TransformerBattle</string>
    <string name="name">Name</string>
    <string name="strength">Strength</string>
    <string name="intelligence">Intelligence</string>
    <string name="endurance">Endurance</string>
    <string name="speed">Speed</string>
    <string name="rank">Rank</string>
    <string name="courage">Courage</string>
    <string name="firepower">FirePower</string>
    <string name="skill">Skill</string>
    <string name="team">Team</string>

    <string name="decepticons">Decepticons</string>
    <string name="autobots">AutoBots</string>

    <string name="update">Update</string>
    <string name="submit">Submit</string>
    <string name="create_transformer">Create Transformer</string>
    <string name="transformer">Transformer</string>

    <string name="select_team">Select Team</string>

    <string name="battle_ground">Battle Ground</string>

    <string-array name="team_game">
        <item>Team A</item>
        <item>Team B</item>
        <item>Team C</item>
        <item>Team D</item>
    </string-array>

    <string-array name="number">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="transformer_list">
        <item>Optimus Prime</item>
        <item>Prowl</item>
        <item>Ratchet</item>
        <item>Blaster</item>
        <item>Bumblebee</item>
        <item>Cliffjumper</item>
        <item>Grimlock</item>
        <item>Grimlock</item>
        <item>Ironhide</item>
        <item>Megatron</item>
        <item>Starscream</item>
        <item>Barricade</item>
        <item>Frenzy</item>
        <item>Bonecrusher</item>
        <item>Blackout</item>
        <item>Scorponok</item>
        <item>Dispensor</item>
        <item>Battletrap</item>
        <item>Blitzwing</item>
        <item>Bombshell</item>
        <item>Bruticus</item>
    </string-array>

    <string-array name="transformers">
        <item>Autobots</item>
        <item>Decepticons</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>