<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_4sdp"
    android:elevation="@dimen/_4sdp"
    android:background="@color/white"
    android:outlineSpotShadowColor="@color/cardview_dark_background"
    app:cardCornerRadius="@dimen/_4sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_4sdp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="@dimen/_250sdp"
            android:src="@drawable/autobots"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_14sdp"
            tools:text="@string/transformer" />

        <TextView
            android:id="@+id/text_team"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_4sdp"
            android:padding="@dimen/_4sdp"
            android:textSize="@dimen/_14sdp"
            android:visibility="visible"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/text_name"
            android:text="@string/autobots"/>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_4sdp"
            app:layout_constraintTop_toBottomOf="@id/text_team"
            android:text="@string/update"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>